# simple_rnd_ssl_engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
app/srndtool/: CMakeLists.txt
app/srndtool/src/: main.c
src/: engine.c  engine.h  rnd.c
